--- a/conditionalstatements.ipynb
+++ b/conditionalstatements.ipynb
@@ -2,17 +2,172 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2951b0cd-6a6e-4334-8976-52e00b9b200f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#to check if elegibal to vote\n",
-    "#check even or odd\n",
+    "#check if even or odd\n",
     "#check multiple of 5 or not\n",
     "#if no. is divisible by 35 or not\n",
     "#print last digit of no."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e388708-fbf5-4290-a827-c5afbc527d36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your age 55\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eligibleto vote\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check if elegibal to vote\n",
+    "age=int(input(\"enter your age\"))\n",
+    "if age >=18:\n",
+    "    print(\"eligibleto vote\")\n",
+    "else:\n",
+    "    print(\"not eligible to vote\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "77cbd356-7871-4f34-9f01-79e727a53ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd number \n"
+     ]
+    }
+   ],
+   "source": [
+    "#check even or odd\n",
+    "num=int(input(\"enter a number\"))\n",
+    "if num%2==0:\n",
+    "    print(\"even number\")\n",
+    "else:\n",
+    "    print(\"odd number \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "432457ea-757e-4eb5-94fa-10f2a1a76ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number 6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6  is notmultiple of 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#check multiple of 5 or not\n",
+    "num=int(input(\"enter a number\"))\n",
+    "if num%5==0:\n",
+    "    print(num,\"multiple of 5 \")\n",
+    "else:\n",
+    "    print(num,\" is not a multiple of 5 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "03ea7222-2db9-4e31-ab10-5445a7f400ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5  is not a divisible by 35 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#if no. is divisible by 35 or not\n",
+    "num=int(input(\"enter a number\"))\n",
+    "if num%35==0:\n",
+    "    print(num,\"divisible by 35 \")\n",
+    "else:\n",
+    "    print(num,\" is not a divisible by 35 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2fe9e92f-f2af-40c8-ac2e-0d78867063b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is the last digit of the number \n"
+     ]
+    }
+   ],
+   "source": [
+    "#print last digit of no.\n",
+    "num=int(input(\"enter a number\"))\n",
+    "print(num%10,\"is the last digit of the number \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "854bf742-8346-4c03-9ce7-f14d33c4b41f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
