first week complete update

--- a/conditionalstatements.ipynb
+++ b/conditionalstatements.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "854bf742-8346-4c03-9ce7-f14d33c4b41f",
    "metadata": {},
    "outputs": [
@@ -173,16 +173,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter side A of a triangle  5\n",
-      "enter side B of a triangle  5\n",
-      "enter side C of a triangle  6\n"
+      "enter side A of a triangle  1\n",
+      "enter side B of a triangle  1\n",
+      "enter side C of a triangle  1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isoceles triangle\n"
+      "equilateral triangle\n"
      ]
     }
    ],
@@ -191,18 +191,22 @@
     "A=float(input(\"enter side A of a triangle \"))\n",
     "B=float(input(\"enter side B of a triangle \"))\n",
     "C=float(input(\"enter side C of a triangle \"))\n",
-    "\n",
-    "if A==B and A!=C :\n",
-    "    print(\"isoceles triangle\")\n",
-    "if A==B and A==C :\n",
-    "    print(\"equilateral triangle\")\n",
-    "if A!=B and A!=C :\n",
-    "    print(\"scalen triangle\")"
+    "#to handle edge case \n",
+    "if(A!=0 and B!=0 and C!=0 ) and (A>0 and B>0 and C>0):\n",
+    "        if A==B and A!=C :\n",
+    "            print(\"isoceles triangle\")\n",
+    "        if A==B and A==C :\n",
+    "            print(\"equilateral triangle\")\n",
+    "        if A!=B and A!=C :\n",
+    "            print(\"scalen triangle\")\n",
+    "else:\n",
+    "    print(\"not a triangle\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "26f1545e-1779-445e-bf94-f3a10088792b",
    "metadata": {},
    "outputs": [
@@ -210,14 +214,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a number : 11\n"
+      "Enter a number : 5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 is not a buzz number\n"
+      "5 is not a buzz number\n"
      ]
     }
    ],
@@ -232,11 +236,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b2c73f21-166a-4c85-9531-8215822d8d86",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1938287802.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check no. if positive or negitive if positive then check if even or odd if even find square if odd find cube \n",
+    "num=float(input(\"enter a number\"))\n",
+    "if num>0:\n",
+    "    if num%2==0:\n",
+    "        print(\"positive even number its square is \", num*num)\n",
+    "    else:\n",
+    "        print(\"odd positive number its cube is \",num**)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fd6b5a6e-5938-469d-b177-5457f2f17aed",
+   "id": "5da87a97-9c52-42a7-b73d-a216785c0572",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_"
+   ]
   }
  ],
  "metadata": {
