--- a/loops week 2 .ipynb
+++ b/loops week 2 .ipynb
@@ -140,10 +140,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb2b650e-8e31-4a43-bc8a-9e9be6fdbe50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:  5\n",
+      "Enter your age:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 5, you will turn 100 years old in the year 2121.\n"
+     ]
+    }
+   ],
    "source": [
     "# Program to tell the year when the user will turn 100\n",
     "name = input(\"Enter your name: \")\n",
@@ -151,6 +167,42 @@
     "current_year = 2026\n",
     "year_100 = current_year + (100 - age)\n",
     "print(f\"Hello {name}, you will turn 100 years old in the year {year_100}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cbb1b9d0-2862-4cad-a9e3-e891ef0e49b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:  55\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not an Armstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WAP to check if the input number is Armstrong or not.\n",
+    "n = int(input(\"Enter a number: \"))\n",
+    "temp = n\n",
+    "sum = 0\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    sum += digit ** 3\n",
+    "    temp //= 10\n",
+    "if sum == n:\n",
+    "    print(\"Armstrong number\")\n",
+    "else:\n",
+    "    print(\"Not an Armstrong number\")"
    ]
   }
  ],
