bubble sort,linear search

--- a/week 3/pattern , userdefined function and strings .ipynb
+++ b/week 3/pattern , userdefined function and strings .ipynb
@@ -55,6 +55,8 @@
     "        print(k,end=\" \")\n",
     "        k+=1\n",
     "    i+=1\n",
+    "    while l<n:\n",
+    "        l=1\n",
     "\n",
     "    print()"
    ]
@@ -278,12 +280,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "10dd8ce0-f878-4b73-a05a-acd017b52297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a string 123 456 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['456', '123']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Program to reverse a string word-wise using a user-defined function\n"
+    "# Program to reverse a string word-wise :\n",
+    "def rev(str):\n",
+    "    result=\"\"\n",
+    "    rstr=str.split()\n",
+    "    result=rstr[::-1]\n",
+    "    return result\n",
+    "str=input(\"enter a string\")\n",
+    "rev(str)"
    ]
   },
   {
