week three final commit

--- a/week 3/binary search_bubble sort.ipynb
+++ b/week 3/binary search_bubble sort.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "source": [
     "WAP to implement Binary Search. (Sorted List)\n",
-    "WAP to implement Bubble Sort. (Unsorted List)"
+    "WAP to implement Bubble Sort. (Unsorted List)\n",
+    "WAP to implement Selection Sort. (Unsorted List)\n",
+    "WAP to implement Merge sort(DNFA). (Unsorted List)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0aea24af-219a-4717-9a18-51c1d8628057",
    "metadata": {},
    "outputs": [
@@ -19,33 +21,18 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter number of elements:  5\n",
+      "Enter number of elements:  3\n",
       "Enter element 1:  1\n",
-      "Enter element 2:  9\n",
-      "Enter element 3:  5\n",
-      "Enter element 4:  6\n",
-      "Enter element 5:  3\n"
+      "Enter element 2:  2\n",
+      "Enter element 3:  3\n",
+      "Enter element to search:  2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted list: [1, 3, 5, 6, 9]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter element to search:  4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Element not found\n"
+      "Element found at index 1\n"
      ]
     }
    ],
@@ -55,8 +42,6 @@
     "arr = []\n",
     "for i in range(n):\n",
     "    arr.append(int(input(f\"Enter element {i+1}: \")))\n",
-    "arr.sort()\n",
-    "print(\"Sorted list:\", arr)\n",
     "key = int(input(\"Enter element to search: \"))\n",
     "low = 0\n",
     "high = n - 1\n",
@@ -122,7 +107,24 @@
    "id": "1d470c28-1cee-43a2-903f-12970109c838",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mergeSort(arr1,arr2):\n",
+    "    i,j = 0,0\n",
+    "    arr = []\n",
+    "    while (i<len(arr1) j<len(arr2)):\n",
+    "        if arr1[i]==arr2[j]:\n",
+    "            arr.append(arr1[i])\n",
+    "            arr.append(arr2[j])\n",
+    "            j+=1\n",
+    "            i+=1\n",
+    "        elif arr1[i]>arr2[j]:\n",
+    "            arr.append(arr2[j])\n",
+    "            j+=1\n",
+    "        elif arr2[j]>arr1[i]:\n",
+    "            arr.append(arr1[i])\n",
+    "            i+=1\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
