--- a/week 6/17-feb.ipynb
+++ b/week 6/17-feb.ipynb
@@ -23,13 +23,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21936bb3-db62-4c54-9d61-042ef7b8fbe8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
    "source": [
-    "s= (1,2,3,4,5,6,7,8,9)\n"
+    "stack = []\n",
+    "stack.append(10)\n",
+    "stack.append(20)\n",
+    "stack.append(30)\n",
+    "print(stack)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2f6ed47e-aec8-429b-9512-db80e171bb8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how to delete top ele\n",
+    "stack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b83887d8-9818-46d4-a0f5-80db18ac5b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0674c875-c6da-411b-b93a-81c85adcb6d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 40]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how to add a item at top\n",
+    "stack.append(40)\n",
+    "stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e52e8a8b-4982-4f8f-bb8f-29cf43285e8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how to check top element\n",
+    "stack[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d466bf21-53b7-43a8-a2ef-fd502156648c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 lenth of stack\n",
+    "len(stack) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "576fd063-9052-4d26-8097-7024f21e0b51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# total elements of stack \n",
+    "len(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2b0107df-586f-4a89-b20f-05d18564ac92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in built stack using queue library \n",
+    "import queue\n",
+    "s = queue.LifoQueue()\n",
+    "s.put(1)\n",
+    "s.put(5)\n",
+    "s.put(15)\n",
+    "\n",
+    "while not s.empty():\n",
+    "    print(s.get())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4aaef462-2f50-4182-9f4e-20a67b7957b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#INBUILT QUEUE \n",
+    "import queue\n",
+    "s = queue.Queue()\n",
+    "s.put(1)\n",
+    "s.put(5)\n",
+    "s.put(15)\n",
+    "\n",
+    "while not s.empty():\n",
+    "    print(s.get())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d0e1cc09-dbd3-40c6-8046-48a3779b191d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isBalanced(s):\n",
+    "    if not s:\n",
+    "        return \"\"\n",
+    "    stack = []\n",
+    "    for char in s:\n",
+    "        if char in '{[(':\n",
+    "            stack.append(char)\n",
+    "        elif char == ')':\n",
+    "            if (not stack or stack[-1] == ')'):\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "        elif char == ']':\n",
+    "            if (not stack or stack[-1] == ']'):\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "        elif char == '}':\n",
+    "            if (not stack or stack[-1] == '}'):\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "    if not stack:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "s = input()\n",
+    "if isBalanced(s):\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print (\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9ccf2b-ac53-46a4-9343-c503d9432f23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
